# luma-hack

./: .gitignore  README.md  airtable.py  clean.sh  cloudflare.py  combine_clips.py  generate_audio.py  luma.ipynb  luma.py  main.py  meme.py  mux_audio_and_video.py  openai_client.py  pyproject.toml  requirements.txt  source.md  twitter_capture.py  utils.py
old/: cloudflare.py  ideogram.py  luma.py  mux_audio_and_video.py  openai_client.py
src/data/source/: dhh.md  open-ai.md  source.md
src/data/state/: dhh_state.json  mkbhd_state.json  open-ai_state.json  trial-run_state.json  wordpress-drama-2_state.json  wordpress-drama_state.json
src/lumagen/: cli.py  main.py  meme_db.py  source_loader.py  state_manager.py  text_to_image.py  workflow_manager.py
src/lumagen/audio_generation/: audio_generator.py  generate_audio.py
src/lumagen/models/text_model/: base.py  openai_llm.py
src/lumagen/models/text_to_image/: base.py  fal_t2i.py  ideogram_t2i.py
src/lumagen/models/text_to_video/: base.py  luma_t2v.py
src/lumagen/models/tts/: base.py  cartesia_tts.py
src/lumagen/scene_processing/: scene_processor.py
src/lumagen/script_generation/: prompt.py  script_generator.py
src/lumagen/storyboard_generation/: prompt.py  storyboard_generator.py
src/lumagen/utils/: file_utils.py  image_utils.py  llm_utils.py  logger.py  video_utils.py
